<resources>
    <string name="app_name">TicTacToe</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="image3">image3</string>
    <string name="image4">image4</string>
    <string name="image5">image5</string>
    <string name="image6">image6</string>
    <string name="image7">image7</string>
    <string name="image8">image8</string>
    <string name="image9">image9</string>
    <string name="onClick">playerTap</string>
    <string name="status">status</string>


</resources>
